--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,28 @@
             background: linear-gradient(45deg, #00d2ff, #3a7bd5, #00d2ff, #3a7bd5);
             background-size: 400% 400%;
             animation: gradientAnimation 15s ease infinite;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
         }
-
+        
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border: 2px solid #008080;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px #000;
+            width: 100%;
+            max-width: 500px;
+        }
+        
+        input,
+        select,
+        button {
+            margin-bottom: 15px;
+        }
         @keyframes gradientAnimation {
             0% {
                 background-position: 0% 50%;
@@ -22,14 +42,6 @@
             100% {
                 background-position: 0% 50%;
             }
-        }
-        .container {
-            background-color: #fff;
-            padding: 20px;
-            border: 2px solid #008080;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px #000;
-            width: 500px;
         }
 
         label {
